# four-oh-four

./: Dockerfile  README.md  compose.yaml  docker-compose.yaml  four-oh-four.http  pyproject.toml  requirements.in  requirements.txt  run.py
.github/: dependabot.yaml
.github/workflows/: build-and-deploy.yaml  build-container-image.yaml  build-latest-container-image.yaml  build-release-container-image.yaml  ruff.yaml
ci/: configure-ssh-key.sh  gen-dependabot.py  gen-github-workflows.py  ssh-deploy.sh
four_oh_four/: app.py  db.py  settings.py
four_oh_four/static/: client.js
four_oh_four/templates/: index.html  test.html
