[project]
name = "four-oh-four"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "fort>=2025.0",
    "psycopg2-binary>=2.9.10",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
